# AIKI

./: .gitignore  README.md  api_test.py  buttom.py  count.py  data.json  demo.py  fast.py  json_file  modal_test.py  nohup.out  origin_demo.py  proceed.py  pyproject.toml  requirements.txt  rpcserver.py  tesrpc.py  test_external_search.py  user.py
aiki/: aiki.py
aiki/agent/: baseagent.py  prompts.py
aiki/bridge/: RAGAgentBridge.py  rag_agent_bridge.py
aiki/clip/: clip.py
aiki/config/: config.py  config.yaml
aiki/corpus/: database.py  mockdatabase.py  storage.py  strategies.py
aiki/corpus/db/: json_file
aiki/database/: __init__.py  base.py  chroma.py  json_file.py  milvus.py  sqlite.py
aiki/embedding_model/: embedding_model.py
aiki/externalsearch/: example.py  external_search.py  requirements.txt
aiki/indexer/: chunker.py  indexer.py
aiki/modal/: interaction_data.py  retrieval_data.py
aiki/multimodal/: __init__.py  base.py  image.py  text.py  types.py  vector.py
aiki/proxy/: query.py
aiki/resource/query/text/: query.json
aiki/resource/source/text/: 上海网红打卡地为何都在“浦西”？.txt
aiki/retriever/: reranker.py  retriever.py
aiki/serialization/: __init__.py  base.py
aiki/util/s3/: fetch.py  s3_client_manager.py  summary.py
db/flicker8k_index/: chroma.sqlite3
db/flicker8k_jina_index/: chroma.sqlite3
db/jina_clip/jina_clip_index/: chroma.sqlite3
db/xiaobu_summary/: xiaobu_summary.json
db/xiaobu_summary/xiaobu_summary_index/: chroma.sqlite3
example/: example.py
examples/ey/: indexing.py  retrieve.py
examples/object365/: indexing.py
examples/whispe/: multi_transformers.py
examples/wiki/: indexing.py  retrieve.py
resource/flicker8k/: caption.txt  get_imgs_script.py  indexing.py
resource/query/text/: query.json
resource/source/text/: 上海街头惊现“魔法巴士”公交车！原来是因为——_解放网，上观新闻.txt  上海警方严防万圣节街头变装活动 据报有人在警局卸妆 _ 联合早报.txt  为看外滩老夫妻驱车6天来沪却遇抛锚，交警赶来援助还化身“导游”.txt  刚刚确认：台风已加强，或影响上海！气象局发“暗示”，网友：夏天欠的账秋天补 _ 极目新闻.txt
tests/agent/: test_baseagent.py
tests/bridge/: test_ragagentbridge.py
tests/clip/: test_clip.py
tests/colpali/: test_colpali_model.py
tests/database/: test_sqlitedb.py
tests/externalsearch/: test_search.py
tests/indexer/: test_chunker.py  test_indexer.py  test_summary.py
tests/multimodal/: test_processor.py  test_processor_image.py  test_processor_vector.py  test_processor_with_sqlite.py
