[tool.poetry]
name = "a-flask-test"
version = "0.1.0"
description = ""
authors = ["rochacbruno"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
bson = "^0.5.10"
pymongo = "^4.10.1"
pillow = "10.4.0"
requests = "2.32.3"
google-search-results = "2.4.2"
serpapi = "0.1.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
isort = "^5.13.2"
pytest-cov = "^5.0.0"
mypy = "^1.13.0"
gitchangelog = "^3.0.4"
mkdocs = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aiki = 'aiki.__main__:main'
